# lib_mysql_qtoken

./: .gitattributes  .gitignore  Makefile.am  README.md  configure.ac  installdb.sql  lib_mysql_qtoken.c  mysqludf.c  mysqludf.h  uninstalldb.sql
config/: ax_lib_mysql.m4
